fix(issue-card): fix text overflow

--- a/src/components/issue-card/style.module.less
+++ b/src/components/issue-card/style.module.less
@@ -32,6 +32,9 @@
     font-size: 24px;
     font-weight: 300;
     color: @grey-local;
+    max-width: calc(100vw - @gap-size * 4);
+    text-overflow: ellipsis;
+    
   }
 
   .info {
